@@ -110,7 +110,6 @@ void UI_HandleEventOnClickUp(int32_t btn, int32_t x, int32_t y)
 	{
 		ui_t* ui_ptr = &ui_list[ui_num];
 
-
 		for (int32_t ui_control_num = 0; ui_control_num < ui_ptr->num_controls; ui_control_num++)
 		{
 			ui_control_t* ui_control_ptr = &ui_ptr->controls[ui_control_num];
@@ -203,7 +202,6 @@ void UI_HandleEventOnKeyUp(int32_t btn)
 	for (int32_t ui_num = 0; ui_num < num_uis; ui_num++)
 	{
 		ui_t* ui_ptr = &ui_list[ui_num];
-
 
 		for (int32_t ui_control_num = 0; ui_control_num < ui_ptr->num_controls; ui_control_num++)
 		{
