@@ -184,7 +184,7 @@ extern cvar_t* r_fullbright;
 extern cvar_t* r_novis;
 extern cvar_t* r_nocull;
 extern cvar_t* r_lerpmodels;
-extern cvar_t* r_scaled_assets_basesize;
+extern cvar_t* r_scaled_assets_basewidth;
 
 extern cvar_t* r_lightlevel;	// FIXME: This is a HACK to get the client's light level
 
